--- a/coding_test/TwoPointer_sequence.ipynb
+++ b/coding_test/TwoPointer_sequence.ipynb
@@ -2,60 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ba5998e0",
+   "execution_count": 42,
+   "id": "6aa59869",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 5\n",
+      "10 2\n",
       "3 -2 -4 -9 0 3 7 13 8 -3\n",
+      "1\n",
+      "2\n",
       "3\n",
-      "-2\n",
-      "-4\n",
-      "-9\n",
-      "0\n"
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "21\n"
      ]
     }
    ],
    "source": [
     "days, std = list(map(int,input().split()))\n",
-    "tmps = list(map(int,input().split()))\n",
+    "temps = list(map(int,input().split()))\n",
     "maxVal = -999\n",
     "i = 0\n",
-    "while i != len(tmps) - std:\n",
-    "    maxVal = max(maxVal,sum(tmps[i:i+std]))\n",
-    "    i+=1\n",
+    "tmp = sum(temps[0]+temps[1])\n",
+    "\n",
+    "for i in range(1,len(temps)-std):\n",
+    "    print(i)\n",
+    "    tmp =  tmp - temps[i-1] + temps[i+1]\n",
+    "    maxVal = max(maxVal,tmp)\n",
+    "\n",
     "print(maxVal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1de163b9",
+   "execution_count": 30,
+   "id": "6d0a6001",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "maxVal"
+    "range(1,len(temps) - std)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4183c63f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 2\n",
+      "3 -2 -4 -9 0 3 7 13 8 -3\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "days, std = list(map(int,input().split()))\n",
+    "temps = list(map(int,input().split()))\n",
+    "maxVal = -999\n",
+    "i = 0\n",
+    "\n",
+    "while i != len(temps) - std:\n",
+    "    maxVal = max(maxVal,sum(temps[i:i+std]))\n",
+    "    i+=1\n",
+    "    \n",
+    "print(maxVal)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824884b1",
+   "id": "35a6e262",
    "metadata": {},
    "outputs": [],
    "source": []
